java compatibility fix